--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ header > p {
     max-width: 600px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-bottom: 10px;
     margin: auto;
 }
 
@@ -120,7 +121,7 @@ nav > a:hover {
 
 main {
     background-color: white;
-    min-width: 400px;
+    min-width: 280px;
     max-width: 800px;
     padding: 20px;
     border-radius: 0px 0px 10px 10px;
